# QuantBox

./: README.md
client-quantbox/: package-lock.json  package.json
server-quantbox/: .gitignore  Cargo.toml
server-quantbox/docs/: tasks.md
server-quantbox/src/: main.rs
server-quantbox/src/api/: black_scholes_handlers.rs  handlers.rs  mod.rs  monte_carlo_handlers.rs  routes.rs
server-quantbox/src/compute/: black_scholes.rs  mod.rs  monte_carlo_engine.rs  parallel_monte_carlo_engine.rs
server-quantbox/src/market_integration/: mod.rs  polygon_provider.rs
server-quantbox/src/models/: black_scholes_result.rs  comparison_response.rs  comparison_result.rs  convergence_response.rs  greek_request.rs  mod.rs  monte_carlo_request.rs  monte_carlo_result.rs
server-quantbox/src/models/black_scholes_models/: black_scholes_request.rs  greek_request.rs  greeks.rs  heatmap.rs  mod.rs  option_type.rs
server-quantbox/src/models/market_data_models/: historical_bar.rs  historical_response.rs  historical_result.rs  market_data_error.rs  market_data_provider.rs  mod.rs  options_contract.rs  stock_quote.rs  volatility_point.rs  volatility_surface.rs
server-quantbox/src/models/monte_carlo_models/: comparison_response.rs  comparison_result.rs  convergence_point.rs  convergence_request.rs  convergence_response.rs  mod.rs  monte_carlo_response.rs  price_differences.rs
server-quantbox/src/models/polygon_models/: mod.rs  polygon_option.rs  polygon_option_response.rs  polygon_quote.rs  polygon_quote_response.rs
server-quantbox/src/services/: market_data_service.rs  mod.rs
(+29 files in other folders)
