[package]
name = "server-quantbox"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
reqwest = { version = "0.12.20", features = ["json"] }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
